--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
 		  
     <!-- Add your site or application content here -->
-	<div class="header">
+	<div class="max-header">
 		<span>
 			<ul class="nav nav-pills pull-right">
 			  <li><a class="navMenu" ng-href="#">Home</a></li>
@@ -40,20 +40,52 @@
 			Travelling Salesman Problem Demo
 		</line>
 	</div>
+	<div class="med-header">
+      <ul class="nav nav-pills nav-stacked pull-right">
+        <li class="dropdown">
+          <img class="dropdown-toggle" data-toggle="dropdown" src ="images/horig.png">
+          <ul class="dropdown-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#/about">About</a></li>
+            <li><a href="#/select">Select</a></li>                        
+          </ul>
+        </li>
+      </ul>
+		<a ng-href="#"> 
+			<img  src="images/icon.png">	  
+		</a>
+		<line class = "Title">
+			Travelling Salesman Problem Demo
+		</line>
+	</div>
+    <div class="min-header">
+      <ul class="nav nav-pills nav-stacked pull-right">
+        <li class="dropdown">
+          <img class="dropdown-toggle" data-toggle="dropdown" src ="images/horig.png">
+          <ul class="dropdown-menu-left">
+            <li><a href="#">Home</a></li>
+            <li><a href="#/about">About</a></li>
+            <li><a href="#/select">Select</a></li>                        
+          </ul>
+        </li>
+      </ul>
+		<a ng-href="#"> 
+			<img  src="images/icon.png">	  
+		</a>
+	</div>
     <div class="cont">
 		<div ng-view=""></div>
 	</div>
 
 	<div class="footer">
 		<div class="row">
-			<div class="col-sm-17">
+			<div class="col-sm-7">
 				<div id="div_footer_links" class="footer-div-style">
 					  <div class="vcard">
-						<span class="fn">Karthik Swarna</span>
-						<span class="footer-separator">|</span>
+						<span hidden class="fn">Karthik Swarna</span>
 						<span hidden class="given-name">Karthik</span>
 						<span hidden class="family-name">Swarna</span>
-						<a class="url" href=https://www.linkedin.com/profile/view?id=39098794&trk=nav_responsive_tab_profile>LinkedIn</a>
+						<a class="url" href=https://www.linkedin.com/profile/view?id=39098794&trk=nav_responsive_tab_profile>Karthik Swarna</a>
 						<span class="footer-separator">|</span>
 						<a class="email" href="mailto:kswarna@live.com">kswarna@live.com</a>
 						<span class="footer-separator">|</span>
