--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
       <ul class="nav nav-pills nav-stacked pull-right">
         <li class="dropdown">
           <img class="dropdown-toggle" data-toggle="dropdown" src ="images/horig.png">
-          <ul class="dropdown-menu-left">
+          <ul class="dropdown-menu">
             <li><a href="#">Home</a></li>
             <li><a href="#/about">About</a></li>
             <li><a href="#/select">Select</a></li>                        
