--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/select.js"></script>
+    <script src="scripts/controllers/result.js"></script>
         <!-- endbuild -->
 </body>
 </html>
