- Addedd Google Maps API for calculating distance - Fleshed out TSPParent.js

--- a/app/index.html
+++ b/app/index.html
@@ -137,10 +137,12 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
-    
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCuH57Is-Wn5bBcHyGoQlolkerX3eWTQVw"></script>
         <script src="scripts/app.js"></script>
 		<script src="scripts/drag.js"></script>
 		<script src="scripts/models/city.js"></script>
+        <script src="scripts/models/TsParent.js"></script>
+
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/select.js"></script>
