--- a/app/index.html
+++ b/app/index.html
@@ -40,16 +40,12 @@
 			Travelling Salesman Problem Demo
 		</line>
 	</div>
-	<div class="med-header">
-      <ul class="nav nav-pills nav-stacked pull-right">
-        <li class="dropdown">
-          <img class="dropdown-toggle" data-toggle="dropdown" src ="images/horig.png">
+	<div class="med-header dropdown">
+          <img class="dropdown-toggle nav pull-right" data-toggle="dropdown" src ="images/horig.png">
           <ul class="dropdown-menu">
             <li><a href="#">Home</a></li>
             <li><a href="#/about">About</a></li>
             <li><a href="#/select">Select</a></li>                        
-          </ul>
-        </li>
       </ul>
 		<a ng-href="#"> 
 			<img  src="images/icon.png">	  
@@ -59,7 +55,7 @@
 		</line>
 	</div>
     <div class="min-header">
-      <ul class="nav nav-pills nav-stacked pull-right">
+      <ul class="nav pull-right">
         <li class="dropdown">
           <img class="dropdown-toggle" data-toggle="dropdown" src ="images/horig.png">
           <ul class="dropdown-menu">
