Test from ubuntu terminal

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
 			<img  src="images/icon.png">	  
 		</a>
 		<line class = "Title">
-			Travelling Salesman Problem Demo
+			Travelling Salesman Problem Demo - test
 		</line>
 	</div>
 	<div class="med-header dropdown">
